Getting ready to host

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "sandify",
-  "homepage": "http://jeffeb3.github.io/sandify",
+  "homepage": "http://www.sandify.tk",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
